--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{site.url}}/">Jekyll Blog</a>
+            <a class="navbar-brand" href="{{site.url}}/">HZ-Blog.com</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
