--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
     {% if page.coverImg %}
     <meta property="og:image" content="{{page.coverImg | prepend: site.url}}" />
     {% endif %}
-
+    <link rel="icon" href=" {{ site.url }}/img//favicon.ico?v=1.1"> 
     <title>{{page.title}}</title>
 
     <!-- Bootstrap Core CSS -->
